tripod-meta/src/main/java/org/datayoo/tripod/antlr/TripodParser.java
// Generated from org/datayoo/tripod/antlr/TripodParser.g4 by ANTLR 4.7.1
package org.datayoo.tripod.antlr;

import java.util.LinkedList;
import java.util.BitSet;
import org.datayoo.tripod.metadata.*;
import org.datayoo.tripod.exception.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TripodParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER=1, TERM=2, Q_PHRASE=3, DQ_PHRASE=4, LPAREN=5, RPAREN=6, LBRACE=7, 
		RBRACE=8, LBRACK=9, RBRACK=10, COMMA=11, NOT=12, COLON=13, AND=14, OR=15, 
		MUST=16, MINUS=17, STAR=18, CARET=19, SWANGDASH=20, QMARK=21, WS=22, COMMENT=23, 
		LINE_COMMENT=24, IDENTIFIER=25;
	public static final int
		RULE_tripodExpression = 0, RULE_orExpression = 1, RULE_andExpression = 2, 
		RULE_notExpression = 3, RULE_basicExpression = 4, RULE_primary = 5, RULE_parenExpression = 6, 
		RULE_rangeTerm = 7, RULE_rangeValue = 8, RULE_inTerm = 9, RULE_term = 10, 
		RULE_phrase = 11, RULE_fuzzyExpression = 12, RULE_proximityExpression = 13;
	public static final String[] ruleNames = {
		"tripodExpression", "orExpression", "andExpression", "notExpression", 
		"basicExpression", "primary", "parenExpression", "rangeTerm", "rangeValue", 
		"inTerm", "term", "phrase", "fuzzyExpression", "proximityExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"','", "'!'", "':'", null, null, "'+'", "'-'", "'*'", "'^'", "'~'", "'?'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NUMBER", "TERM", "Q_PHRASE", "DQ_PHRASE", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "LBRACK", "RBRACK", "COMMA", "NOT", "COLON", "AND", "OR", "MUST", 
		"MINUS", "STAR", "CARET", "SWANGDASH", "QMARK", "WS", "COMMENT", "LINE_COMMENT", 
		"IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TripodParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	protected void mismatch(IntStream input, int ttype, BitSet follow)
	throws RecognitionException
	{
	String message = String.format("'%c' is invalid!", input.LA(ttype));
	throw new TripodRuntimeException(message);
	}

	public void recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
	throws RecognitionException
	{
	throw e;
	}

	public TripodParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TripodExpressionContext extends ParserRuleContext {
		public BoolMetadata boolMetadata;
		public OrExpressionContext lExpr;
		public OrExpressionContext rExpr;
		public List<OrExpressionContext> orExpression() {
			return getRuleContexts(OrExpressionContext.class);
		}
		public OrExpressionContext orExpression(int i) {
			return getRuleContext(OrExpressionContext.class,i);
		}
		public TripodExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tripodExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterTripodExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitTripodExpression(this);
		}
	}

	public final TripodExpressionContext tripodExpression() throws RecognitionException {
		TripodExpressionContext _localctx = new TripodExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tripodExpression);

		    ((TripodExpressionContext)_localctx).boolMetadata =  new BoolMetadata();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((TripodExpressionContext)_localctx).lExpr = orExpression();

			    _localctx.boolMetadata.getBoolExprs().add(((TripodExpressionContext)_localctx).lExpr.expressionMetadata);
			  
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << TERM) | (1L << Q_PHRASE) | (1L << DQ_PHRASE) | (1L << LPAREN) | (1L << LBRACE) | (1L << LBRACK) | (1L << NOT) | (1L << MUST) | (1L << MINUS) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(30);
				((TripodExpressionContext)_localctx).rExpr = orExpression();

				    _localctx.boolMetadata.getBoolExprs().add(((TripodExpressionContext)_localctx).rExpr.expressionMetadata);
				  
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrExpressionContext extends ParserRuleContext {
		public ExpressionMetadata expressionMetadata;
		public AndExpressionContext lExpr;
		public AndExpressionContext rExpr;
		public List<AndExpressionContext> andExpression() {
			return getRuleContexts(AndExpressionContext.class);
		}
		public AndExpressionContext andExpression(int i) {
			return getRuleContext(AndExpressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(TripodParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(TripodParser.OR, i);
		}
		public OrExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterOrExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitOrExpression(this);
		}
	}

	public final OrExpressionContext orExpression() throws RecognitionException {
		OrExpressionContext _localctx = new OrExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_orExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((OrExpressionContext)_localctx).lExpr = andExpression();

			    ((OrExpressionContext)_localctx).expressionMetadata =  ((OrExpressionContext)_localctx).lExpr.expressionMetadata;
			  
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(40);
				match(OR);
				setState(41);
				((OrExpressionContext)_localctx).rExpr = andExpression();

				    ((OrExpressionContext)_localctx).expressionMetadata =  new BinaryMetadata(ExpressionType.OR, _localctx.expressionMetadata, ((OrExpressionContext)_localctx).rExpr.expressionMetadata);
				  
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExpressionContext extends ParserRuleContext {
		public ExpressionMetadata expressionMetadata;
		public NotExpressionContext lExpr;
		public NotExpressionContext rExpr;
		public List<NotExpressionContext> notExpression() {
			return getRuleContexts(NotExpressionContext.class);
		}
		public NotExpressionContext notExpression(int i) {
			return getRuleContext(NotExpressionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(TripodParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(TripodParser.AND, i);
		}
		public AndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitAndExpression(this);
		}
	}

	public final AndExpressionContext andExpression() throws RecognitionException {
		AndExpressionContext _localctx = new AndExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_andExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((AndExpressionContext)_localctx).lExpr = notExpression();

			    ((AndExpressionContext)_localctx).expressionMetadata =  ((AndExpressionContext)_localctx).lExpr.expressionMetadata;
			  
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(51);
				match(AND);
				setState(52);
				((AndExpressionContext)_localctx).rExpr = notExpression();

				    ((AndExpressionContext)_localctx).expressionMetadata =  new BinaryMetadata(ExpressionType.AND, _localctx.expressionMetadata, ((AndExpressionContext)_localctx).rExpr.expressionMetadata);
				  
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotExpressionContext extends ParserRuleContext {
		public ExpressionMetadata expressionMetadata;
		public BasicExpressionContext exprCtx;
		public BasicExpressionContext basicExpression() {
			return getRuleContext(BasicExpressionContext.class,0);
		}
		public TerminalNode NOT() { return getToken(TripodParser.NOT, 0); }
		public TerminalNode MINUS() { return getToken(TripodParser.MINUS, 0); }
		public NotExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterNotExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitNotExpression(this);
		}
	}

	public final NotExpressionContext notExpression() throws RecognitionException {
		NotExpressionContext _localctx = new NotExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_notExpression);

		    ExpressionType expressionType = null;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(60);
				match(NOT);
				expressionType = ExpressionType.NOT;
				}
				break;
			case MINUS:
				{
				setState(62);
				match(MINUS);
				expressionType = ExpressionType.MINUS;
				}
				break;
			case NUMBER:
			case TERM:
			case Q_PHRASE:
			case DQ_PHRASE:
			case LPAREN:
			case LBRACE:
			case LBRACK:
			case MUST:
			case IDENTIFIER:
				break;
			default:
				break;
			}
			setState(66);
			((NotExpressionContext)_localctx).exprCtx = basicExpression();

			    if (expressionType == null)
			        ((NotExpressionContext)_localctx).expressionMetadata =  ((NotExpressionContext)_localctx).exprCtx.expressionMetadata;
			    else {
			        ((NotExpressionContext)_localctx).expressionMetadata =  new UnaryMetadata(expressionType, ((NotExpressionContext)_localctx).exprCtx.expressionMetadata);
			    }
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicExpressionContext extends ParserRuleContext {
		public ExpressionMetadata expressionMetadata;
		public Token t;
		public PrimaryContext primaryCtx;
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public TerminalNode MUST() { return getToken(TripodParser.MUST, 0); }
		public TerminalNode COLON() { return getToken(TripodParser.COLON, 0); }
		public TerminalNode CARET() { return getToken(TripodParser.CARET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TripodParser.IDENTIFIER, 0); }
		public TerminalNode NUMBER() { return getToken(TripodParser.NUMBER, 0); }
		public BasicExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterBasicExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitBasicExpression(this);
		}
	}

	public final BasicExpressionContext basicExpression() throws RecognitionException {
		BasicExpressionContext _localctx = new BasicExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_basicExpression);

		    boolean must = false;
		    String field = null;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUST) {
				{
				setState(69);
				match(MUST);
				must = true;
				}
			}

			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(73);
				((BasicExpressionContext)_localctx).t = match(IDENTIFIER);
				setState(74);
				match(COLON);

				        field = ((BasicExpressionContext)_localctx).t.getText();
				    
				}
			}

			setState(78);
			((BasicExpressionContext)_localctx).primaryCtx = primary();

			        ((BasicExpressionContext)_localctx).expressionMetadata =  ((BasicExpressionContext)_localctx).primaryCtx.expressionMetadata;
			    
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CARET) {
				{
				setState(80);
				match(CARET);
				setState(82);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(81);
					((BasicExpressionContext)_localctx).t = match(NUMBER);
					}
					break;
				}

				      if (((BasicExpressionContext)_localctx).t != null) {
				          _localctx.expressionMetadata.setBoost(Integer.valueOf(((BasicExpressionContext)_localctx).t.getText()));
				      }
				    
				}
			}

			}
			_ctx.stop = _input.LT(-1);

			    if (field != null) {
			        ((BasicExpressionContext)_localctx).expressionMetadata =  new FieldMetadata(field, _localctx.expressionMetadata);
			    }
			    if (must) {
			        ((BasicExpressionContext)_localctx).expressionMetadata =  new UnaryMetadata(ExpressionType.MUST, _localctx.expressionMetadata);
			    }

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public ExpressionMetadata expressionMetadata;
		public RangeTermContext rangeCtx;
		public InTermContext inCtx;
		public ParenExpressionContext parenCtx;
		public TermContext termCtx;
		public FuzzyExpressionContext fuzzyCtx;
		public PhraseContext phraseCtx;
		public ProximityExpressionContext proximityCtx;
		public RangeTermContext rangeTerm() {
			return getRuleContext(RangeTermContext.class,0);
		}
		public InTermContext inTerm() {
			return getRuleContext(InTermContext.class,0);
		}
		public ParenExpressionContext parenExpression() {
			return getRuleContext(ParenExpressionContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FuzzyExpressionContext fuzzyExpression() {
			return getRuleContext(FuzzyExpressionContext.class,0);
		}
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public ProximityExpressionContext proximityExpression() {
			return getRuleContext(ProximityExpressionContext.class,0);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitPrimary(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primary);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((PrimaryContext)_localctx).rangeCtx = rangeTerm();
				((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).rangeCtx.rangeMetadata;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				((PrimaryContext)_localctx).inCtx = inTerm();
				((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).inCtx.inMetadata;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				((PrimaryContext)_localctx).parenCtx = parenExpression();
				((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).parenCtx.parenMetadata;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				((PrimaryContext)_localctx).termCtx = term();
				((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).termCtx.expressionMetadata;
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SWANGDASH) {
					{
					setState(98);
					((PrimaryContext)_localctx).fuzzyCtx = fuzzyExpression();

					     ((PrimaryContext)_localctx).fuzzyCtx.fuzzyMetadata.setExpr(_localctx.expressionMetadata);
					     ((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).fuzzyCtx.fuzzyMetadata;
					  
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				((PrimaryContext)_localctx).phraseCtx = phrase();
				((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).phraseCtx.phraseMetadata;
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SWANGDASH) {
					{
					setState(105);
					((PrimaryContext)_localctx).proximityCtx = proximityExpression();

					    ((PrimaryContext)_localctx).proximityCtx.proximityMetadata.setExpr(_localctx.expressionMetadata);
					    ((PrimaryContext)_localctx).expressionMetadata =  ((PrimaryContext)_localctx).proximityCtx.proximityMetadata;
					  
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParenExpressionContext extends ParserRuleContext {
		public UnaryMetadata parenMetadata;
		public TripodExpressionContext exprCtx;
		public TerminalNode LPAREN() { return getToken(TripodParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TripodParser.RPAREN, 0); }
		public TripodExpressionContext tripodExpression() {
			return getRuleContext(TripodExpressionContext.class,0);
		}
		public ParenExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterParenExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitParenExpression(this);
		}
	}

	public final ParenExpressionContext parenExpression() throws RecognitionException {
		ParenExpressionContext _localctx = new ParenExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parenExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(LPAREN);
			setState(113);
			((ParenExpressionContext)_localctx).exprCtx = tripodExpression();

			    ((ParenExpressionContext)_localctx).parenMetadata =  new UnaryMetadata(ExpressionType.PAREN, ((ParenExpressionContext)_localctx).exprCtx.boolMetadata);
			  
			setState(115);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeTermContext extends ParserRuleContext {
		public RangeMetadata rangeMetadata;
		public RangeValueContext lExpr;
		public RangeValueContext rExpr;
		public TerminalNode COMMA() { return getToken(TripodParser.COMMA, 0); }
		public List<RangeValueContext> rangeValue() {
			return getRuleContexts(RangeValueContext.class);
		}
		public RangeValueContext rangeValue(int i) {
			return getRuleContext(RangeValueContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(TripodParser.LBRACK, 0); }
		public TerminalNode LBRACE() { return getToken(TripodParser.LBRACE, 0); }
		public TerminalNode RBRACK() { return getToken(TripodParser.RBRACK, 0); }
		public TerminalNode RBRACE() { return getToken(TripodParser.RBRACE, 0); }
		public RangeTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).enterRangeTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TripodParserListener ) ((TripodParserListener)listener).exitRangeTerm(this);
		}
	}

	public final RangeTermContext rangeTerm() throws RecognitionException {
		RangeTermContext _localctx = new RangeTermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rangeTerm);

		  boolean lInclude = false;
		  boolean rInclude = false;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACK:
				{
				setState(117);
				match(LBRACK);
				lInclude = true;
				}
				break;
			case LBRACE:
				{
				setState(119);
				match(LBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(122);
			((RangeTermContext)_localctx).lExpr = rangeValue();
			setState(123);
			match(COMMA);
			setState(124);
			((RangeTermContext)_localctx).rExpr = rangeValue();
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RBRACK:
				{
				setState(125);
				match(RBRACK);
				rInclude = true;
				}
				break;
			case RBRACE:
				{
				setState(127);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}

			    ((RangeTermContext)_localctx).rangeMetadata =  new RangeMetadata(lInclude, ((RangeTermContext)_localctx).lExpr.expressionMetadata, ((RangeTermContext)_localctx).rExpr.expressionMetadata, rInclude);
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
